// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UnknownError renders default styles 1`] = `
<div>
  <h1>
    Something went wrong!
  </h1>
  <h2>
    We are currently unable to render this page.
  </h2>
  <p>
    Please check your connection and try to  
    <button
      style="background-color: transparent; cursor: pointer; display: inline; margin: 0px; padding: 0px; color: rgb(0, 86, 179); text-decoration: none;"
    >
      refresh the page
    </button>
  </p>
</div>
`;

exports[`UnknownError updates styles on mouse hover 1`] = `
<div>
  <h1>
    Something went wrong!
  </h1>
  <h2>
    We are currently unable to render this page.
  </h2>
  <p>
    Please check your connection and try to  
    <button
      style="background-color: transparent; cursor: pointer; display: inline; margin: 0px; padding: 0px; color: rgb(0, 61, 130); text-decoration: underline;"
    >
      refresh the page
    </button>
  </p>
</div>
`;
